@@ -53,6 +53,7 @@ requires = [
     'snowballstemmer>=1.1',
     'babel>=1.3,!=2.0',
     'alabaster>=0.7,<0.8',
+    'imagesize',
 ]
 extras_require = {
     # Environment Marker works for wheel 0.24 or later
