@@ -20,15 +20,8 @@ from docutils.writers.html4css1 import Writer, HTMLTranslator as BaseTranslator
 
 from sphinx import addnodes
 from sphinx.locale import admonitionlabels, _
+from sphinx.util.images import get_image_size
 from sphinx.util.smartypants import sphinx_smarty_pants
-
-try:
-    from PIL import Image        # check for the Python Imaging Library
-except ImportError:
-    try:
-        import Image
-    except ImportError:
-        Image = None
 
 # A good overview of the purpose behind these classes can be found here:
 # http://www.arnebrodowski.de/blog/write-your-own-restructuredtext-writer.html
@@ -481,21 +474,16 @@ class HTMLTranslator(BaseTranslator):
             # Try to figure out image height and width.  Docutils does that too,
             # but it tries the final file name, which does not necessarily exist
             # yet at the time the HTML file is written.
-            if Image and not ('width' in node and 'height' in node):
-                try:
-                    im = Image.open(os.path.join(self.builder.srcdir, olduri))
-                except (IOError,  # Source image can't be found or opened
-                        UnicodeError):  # PIL doesn't like Unicode paths.
-                    pass
+            if not ('width' in node and 'height' in node):
+                size = get_image_size(os.path.join(self.builder.srcdir, olduri))
+                if size is None:
+                    self.builder.env.warn_node('Could not obtain image size. '
+                                               ':scale: option is ignored.', node)
                 else:
                     if 'width' not in node:
-                        node['width'] = str(im.size[0])
+                        node['width'] = str(size[0])
                     if 'height' not in node:
-                        node['height'] = str(im.size[1])
-                    try:
-                        im.fp.close()
-                    except Exception:
-                        pass
+                        node['height'] = str(size[1])
         BaseTranslator.visit_image(self, node)
 
     def visit_toctree(self, node):
