@@ -11,3 +11,4 @@ sqlalchemy>=0.9
 whoosh>=2.0
 alabaster
 sphinx_rtd_theme
+imagesize
